# changeversion

./: .bumpversion.cfg  .bumpversion.toml  .pypirc  :w  README.md  VERSION  azure-pipelines.yml  fr.txy  list_versions.py  pyproject.toml  requirements.txt  richtest.py  tag_and_push.sh  tox.ini
src/changeversion/: .gitme.py.swp  Progress.py  cmdline.py  gitme.py  gits.py  new_version.py  new_version_x.py  run.py  test_git.py  versh.py
tests/: my_test.py
tests/changeversion/: test_version_holder.py
