[project]
  name="changeversion"
  dynamic = ["version"]

[project.scripts]
changeversion = "changeversion.cmdline:main"

#[options]
#packages = find:
#include-package-data = True  

# [tool.setuptools]
# packages = ['src', 'src.changeversion']
# package-dir = {"" = "src"}


[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[xtool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*.py"]
exclude = ["*tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false

