[project]
  name="changeversion"
  dynamic = ["version", "dependencies"]

[project.scripts]
changeversion = "changeversion.cmdline:main"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}
dependencies = {file = ["requirements.txt"]}

[xtool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*.py"]
exclude = ["*tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false

[bumpversion:file:VERSION]
[bumpversion:files]
'VERSION'
